--- a/css/homepage_ui.css
+++ b/css/homepage_ui.css
@@ -29,7 +29,7 @@ html {
 
 body {
   background-color: white;
-  background: url("https://lh4.googleusercontent.com/cbHGkmrk5a-Vca6fbnPccJN3irkAWK4MpX_d9ruyc4_CkZ_wZD5d9BTB7oNngJqMNbqUMc2GzQqIB6jclXa9=w1870-h942-rw") no-repeat center fixed;
+  background: url("/img/nyc-1-3.jpg") no-repeat center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
