--- a/css/homepage_ui.css
+++ b/css/homepage_ui.css
@@ -29,7 +29,7 @@ html {
 
 body {
   background-color: white;
-  background: url("/img/nyc-1-3.jpg") no-repeat center fixed;
+  background: url("https://scontent-lga3-1.xx.fbcdn.net/v/t31.0-8/26060173_939873322829114_3303175302304483294_o.jpg?oh=0f88e00db73283d464d58c81ef09c771&oe=5AE028BA") no-repeat center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
